# f2src

./: .gitignore  AssetContainer.cpp  AssetContainer.h  AssetGeneratorConfig.h  AssetGeneratorConfig.h.in  AssetNamespace.cpp  AssetNamespace.h  AssetParser.cpp  AssetParser.h  CMakeLists.txt  CMakeSettings.json  LICENSE  MappingItem.cpp  MappingItem.h  README.md  files_mapper.h  main.cpp
fmt/: posix.cc
test_files/misc/: test.json
tests/: CMakeLists.txt  test_main.cpp
